Manage days off for certain days for the current week instead of fixed days for a every week